# cod4-plugpp-example

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  configure
include/plugpp-example/: ExamplePlugin.h  literals.h
include/plugpp-example/io/: print.h
src/: main.cpp
